Added Q promises to the AJAX json loading.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <!-- Load up js. -->
         <script src="js/vendor/angular/angular.min.js"></script>
         <script src="js/vendor/underscore-min.js"></script>
+        <script src="js/vendor/q.min.js"></script>
         <script src="js//angular-blog.js"></script>
         <script src="js/main.js"></script>
     </body>
