Started adding some better SASS.

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,7 @@
+
+<!-- Home style. -->
+<link rel="stylesheet" typpe="text/css" href="css/home.css">
+
 <!-- Home view. -->
 <div class="home">
   Home
