--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link href='http://fonts.googleapis.com/css?family=Bitter:400,700,400italic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/main.css">
+        
+        <link href='http://fonts.googleapis.com/css?family=Raleway|Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+
+        <!-- Header. -->
+        <div class="header">
+            <div class="site-icon"></div>
+            <div class="intro">Sup! I'm <a href="#">CJ Cenizal</a> and I love building users interfaces.</div>
+            <div class="current-work">
+                <button  id="current-work-button" class="button button--huge current-work-button">Here's what I'm working on.</button>
+                <!-- TODO: Put work list here, tie together w/ JS -->
+            </div>
+            <div class="quick-links">
+                <!-- TODO: Assign js functionality to make these links do whatever -->
+                <button class="button button--round github-button quick-link"></button>
+                <button class="button button--round email-button quick-link"></button>
+            </div>
+        </div><!-- End header. -->
 
         <!-- Viewport. -->
         <ng-view></ng-view>
