Refactored our directives to be added externally to Acute.js.

--- a/index.html
+++ b/index.html
@@ -13,26 +13,12 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         
         <link href='http://fonts.googleapis.com/css?family=Raleway|Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" typpe="text/css" href="css/home.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-
-        <!-- Header. -->
-        <div class="header">
-            <div class="site-icon"></div>
-            <div class="intro">Sup! I'm <a href="#">CJ Cenizal</a> and I love building users interfaces.</div>
-            <div class="current-work">
-                <button  id="current-work-button" class="button button--huge current-work-button">Here's what I'm working on.</button>
-                <!-- TODO: Put work list here, tie together w/ JS -->
-            </div>
-            <div class="quick-links">
-                <!-- TODO: Assign js functionality to make these links do whatever -->
-                <button class="button button--round github-button quick-link"></button>
-                <button class="button button--round email-button quick-link"></button>
-            </div>
-        </div><!-- End header. -->
 
         <!-- Viewport. -->
         <ng-view></ng-view>
@@ -41,7 +27,7 @@
         <script src="js/vendor/angular/angular.min.js"></script>
         <script src="js/vendor/underscore-min.js"></script>
         <script src="js/vendor/q.min.js"></script>
-        <script src="js//angular-blog.js"></script>
+        <script src="js//Acute.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
