Simplified format of JSON and refined the framework so the API for accessing data maps more logically to the JSON format.

--- a/html/pages/home.html
+++ b/html/pages/home.html
@@ -2,7 +2,7 @@
 <!-- Home view. -->
 <div class="home">
   Home
-  <posts-list list="posts"></posts-list>
+  <posts-list list="posts.list"></posts-list>
   <br />
-  <sidebar list="pages"></sidebar>
+  <sidebar list="pages.list"></sidebar>
 </div>
