Added functionality for linking out to external sites from a content list. Added README.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         <link href='http://fonts.googleapis.com/css?family=Raleway|Roboto:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" typpe="text/css" href="css/home.css">
     </head>
-    <body>
+    <body ng-controller="SiteController">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+
+        {{ data.site_name }}
 
         <!-- Viewport. -->
         <ng-view></ng-view>
